# KitchenTimer

./: .gitignore  KitchenTimer.tsl  README.md  build.cfg_sample  makefile
clash/: assembly.md  cabal.project  iceblink.pcf  kitchentimer.cabal  makefile
clash/assembly/gerber/: kitchentimer-B.Cu.gbr  kitchentimer-B.Mask.gbr  kitchentimer-B.SilkS.gbr  kitchentimer-Edge.Cuts.gbr  kitchentimer-F.Cu.gbr  kitchentimer-F.Mask.gbr  kitchentimer-F.SilkS.gbr  kitchentimer.drl
clash/src/: TopEntity.hs
threepennygui/: LICENSE  makefile  stack.yaml  threepenny-gui-kitchentimer.cabal
threepennygui/src/: Beep.hs  Main.hs
yampa/: stack.yaml  yampa-kitchentimer.cabal
yampa/src/: Beep.hs  Main.hs
