name:                yampa-kitchentimer
version:             1.0.0.0
synopsis:            Synthezied Timer (Yampa Version)
description:         Test program to implement a synthesized timer using Yampa.
license:             MIT
license-file:        LICENSE
author:              Felix Klein
maintainer:          klein@react.uni-saarland.de
category:            Synthesis
build-type:          Simple
cabal-version:       >=1.10

executable KitchenTimer

  main-is:
    Main.hs

  ghc-options:
    -Wall -Wno-name-shadowing

  build-depends:
      base >=4.11 && <4.13
    , proteaaudio >= 0.7
    , Yampa >= 0.13
    , gloss >= 0.13
    , bytestring

  other-modules:
    Control
    Beep

  hs-source-dirs:
    src

  default-language:
    Haskell2010
